# examour-exokernel

./: .gitignore  .gitmodules  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  README.md  clean_up_cmake_files.sh  grub.cfg  launch_vm.sh  mk_base_image.sh  mkimage.sh
kernel/: .config  .cproject  CMakeLists.txt  Doxyfile  Makefile  TODO  examour_0.2_architecture.odp
kernel/build_tools/: HOWTO
kernel/cmake/: CPackConfig.cmake  examourConfig.cmake
kernel/debugging/: debugging.c
kernel/drivers/: Makefile
kernel/drivers/fs/tgfs/: CMakeLists.txt  Makefile  tgfs.c
kernel/drivers/fs/tgfs/include/: malloc.h
kernel/drivers/fs/vfat/: CMakeLists.txt  Makefile  fat32.c
kernel/drivers/input/kbd/: CMakeLists.txt
kernel/drivers/mm/segment/: CMakeLists.txt
kernel/drivers/mm/slab/: slab.h  slab_cache.c  slab_types.h  vmm.h
kernel/drivers/rt/c/: CMakeLists.txt
kernel/drivers/video/vesa/: CMakeLists.txt
kernel/drivers/video/vga/: CMakeLists.txt  vga.c
kernel/exaboot/impl/grub/: main.c
kernel/exabus/impl/ntree_based/: exabus.c
kernel/exabus/impl/ntree_based/include/: internal.h
kernel/exaevent/impl/pic_based/: io.c
kernel/exaevent/impl/pic_based/include/: internal.h
kernel/exaevent/tests/: exaevent_testing.c
kernel/examem/impl/list_based/: examem.c  hdr_mem_blk.c
kernel/examem/impl/list_based/tests/: TESThdr_mem_blk.c
kernel/examem/tests/: TESTexamem.c
kernel/examour/: .mtoolsrc  CMakeLists.txt  IDEAS  Makefile  TODO
kernel/examour/arch/i386/: Makefile
kernel/examour/arch/i386/core/default_core/: globals.c  main.c
kernel/examour/arch/i386/env/default_env/: env.c  timer.c
kernel/examour/arch/i386/event/default_event/: event.c  io.c  khandler.c
kernel/examour/arch/i386/examour/: env  event  mm  security
kernel/examour/arch/i386/mm/segment_mm/: kernel.lds  (+2 more)
kernel/examour/documentation/: first_env_launching  general_thoughts_on_the_architecture  source_tree_organisation  timeslice_manager  x86_kernel_components
kernel/examour/include/: stddef.h
kernel/examour/include/gnu/: stubs.h
kernel/exaprocess/impl/list_based/: exaprocess.c
kernel/exaprocess/impl/list_based/include/: internal.h
kernel/exaprocess/tests/: exaprocess_testing.c
kernel/formatted-documentation/: A_general_overview_of_the_examour_architecture.odt  dynamic_library_in_examour.odt  examour_design.xmi  security_in_the_examour_exokernel.odt  the_examour_driver_model.odt
kernel/include/: CMakeLists.txt  CONTENT  exaevent.h  examem.h
kernel/include/examour/: CMakeLists.txt  version.h  version.h.in
kernel/include/examour/core/: asm.h  globals.h  segment_enum.h
kernel/include/examour/env/: env_enum.h  env_types.h  timeslice.h  timeslice_types.h
kernel/include/examour/event/: 8259a.h  event_types.h  exception_enum.h  exception_types.h  idt.h  io.h  io_types.h  irq.def  irq.h  syscalls_event.def
kernel/include/examour/mm/: ldt.h  mem.h  mem_types.h  mm_syscalls.h  phymem.h
kernel/include/examour/security/: security.h
kernel/include/examour/support/: string.h
kernel/libos/l4/franck_vs_project/l4/: l4.vcproj
kernel/libos/l4/kernel/include/: bitmask.h  macros.h  sync.h
kernel/libos/l4/kernel/src/: main.c
kernel/libos/libc/klibc/: Kbuild  Makefile  atol.c  strntoumax.c  strtoll.c  strtox.c.x
kernel/libs/klibc/: CAVEATS  CMakeLists.txt  globals.c  qsort.c  strtoimax.c
kernel/libs/klibc/include/: examour_api.h  stdlib.h
kernel/libs/klibc/src/: CMakeLists.txt  strtoull.c  strtoumax.c
kernel/libs/klibc/src/ctype/: CMakeLists.txt
kernel/libs/klibc/src/include/: ctype.h  unistd.h
kernel/libs/klibc/src/zlib/: CMakeLists.txt
kernel/qemu/: .project  README  cli_compilation_bochs.txt  launch.sh
kernel/qemu/build_tools/: .bochsrc  fd.img
kernel/src/: CMakeLists.txt
kernel/src/arch/i386/: CMakeLists.txt  linkmap.lds
kernel/src/arch/i386/asm/: boot.s
kernel/src/arch/i386/core/: CMakeLists.txt  main.c
kernel/src/arch/i386/env/: CMakeLists.txt  timeslice.c
kernel/src/arch/i386/event/: 8259a.c  CMakeLists.txt  event.c
kernel/src/arch/i386/mm/: CMakeLists.txt  ldt.c
kernel/src/arch/i386/support/: CMakeLists.txt
kernel/src/arch/x86_64/: kmain.c  linkmap.lds
kernel/src/arch/x86_64/asm/: boot32.s  boot64.s
kernel/src/boot/: CMakeLists.txt
kernel/src/boot/arch/i386/: bootstrap.s  kernel.ld
kernel/src/boot/include/: multiboot.h
kernel/src/bus/: CMakeLists.txt
kernel/src/debug/: CMakeLists.txt
kernel/src/debug/include/: log.h
kernel/src/event/: CMakeLists.txt
kernel/src/mm/: CMakeLists.txt
kernel/src/mm/arch/i386/: arch_mm.c
kernel/src/mm/include/: mm_blk.h
kernel/src/process/: CMakeLists.txt
kernel/tests-core/: AllTests.c
kernel/tests-core/include/: CuTest.h
libs/klibc/src/: CMakeLists.txt  atox.c.x
libs/klibc/src/arch/i386/: env.lds
libs/klibc/src/ctype/: CMakeLists.txt
libs/libslds/: AUTHOR  CMakeLists.txt  Doxyfile  ISSUE  README
libs/libslds/cmake/: CPackConfig.cmake
libs/libslds/include/: CMakeLists.txt
libs/libslds/include/libslds/: CMakeLists.txt  common.h  hash.h  list.h  tree.h  version.h.in
libs/libslds/src/: CMakeLists.txt
libs/libslds/src/hash/: CMakeLists.txt  hash.c  integer_hashing.c  string_hashing.c
libs/libslds/src/list/: CMakeLists.txt  clist.c  dlist.c  slist.c
libs/libslds/src/tree/: CMakeLists.txt
libs/libslds/src/tree/binary/: CMakeLists.txt  avl_rotation.c  bst_tree.c  ebst_tree.c  kd_tree.c  redblack_tree.c  splay_tree.c  t_tree.c  treap.c  weight_balanced_tree.c
libs/libslds/src/tree/nary/: 234_tree.c  23_tree.c  CMakeLists.txt  common.c  fusion_tree.c  hilbert_rtree.c  nary_tree.c  oc_tree.c  quad_tree.c  r_tree.c  rstar_tree.c  ternary_tree.c  trie_tree.c  ub_tree.c
libs/libslds/tests/: AllTests.c  CuTest.c  gen-tests.sh
libs/libslds/tests/hash/: hashTesting.c
libs/libslds/tests/list/: clistTesting.c  dlistTesting.c  queueTesting.c  slistTesting.c  stackTesting.c
libs/libslds/tests/tree/binary/: avl_rotationTesting.c  bst_treeTesting.c  ebst_treeTesting.c  redblack_treeTesting.c  splay_treeTesting.c
libs/libslds/tests/tree/nary/: nary_treeTesting.c
(+293 files in other folders)
